Added h1 and div labels
phone and email first

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
+  <h1>Registration Form</h1>
   <fieldset>
-    <legend></legend>
+    <legend>Personal Information</legend>
+	<div><label>Email Address: <input size="100" type="text" name="email"></label></div>
+    <div><label>Phone Number: <input size="100" type="text" name="phone"></label></div>
   </fieldset>
 </body>
 </html>
