fixed birthday not appearing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <legend>Personal Information</legend>
     <div><label>Email Address: <input size="100" type="text" name="email"></label></div>
     <div><label>Phone Number: <input size="100" type="text" name="phone"></label></div>
-	<div><label>Date of Birth: <type="date" name="birthday"></label></div>
+	<div><label>Date of Birth: <input type="date" name="birthday"></label></div>
   </fieldset>
 </body>
 </html>
