--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <h1>Registration Form</h1>
   <fieldset>
     <legend>Personal Information</legend>
-    <div><label>Email Address: <input size="100" type="text" name="email"></label></div>
-    <div><label>Phone Number: <input size="100" type="text" name="phone"></label></div>
-    <div><label>Date of Birth: <input type="date" name="birthday"></label></div>
+    <div id="form_comp"><label>Email Address: <input size="100" type="text"></label></div>
+    <div id="form_comp"><label>Phone Number: <input size="100" type="text"></label></div>
+    <div id="form_comp"><label>Date of Birth: <input type="date"></label></div>
     <div><input type="submit" value="Submit"></div>
   </fieldset>
 </body>
