--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1>Registration Form</h1>
   <fieldset>
     <legend>Personal Information</legend>
-    <div class="main"><label>Email Address: <input size="100" type="text"></label></div>
-    <div class="main"><label>Phone Number: <input size="100" type="text"></label></div>
+    <div class="main"><label>Email Address: <input type="text"></label></div>
+    <div class="main"><label>Phone Number: <input type="text"></label></div>
     <div class="main"><label>Date of Birth: <input type="date"></label></div>
     <div><input type="submit" value="Submit"></div>
   </fieldset>
