--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <link rel="stylesheet" media="screen" href="css/screen.css">
 </head>
 <body>
-  <h1>Registration Form</h1>
+  <h1 id="header">Registration Form</h1>
   <fieldset>
     <legend>Personal Information</legend>
-    <div class="main"><label>Email Address: <input type="text"></label></div>
-    <div class="main"><label>Phone Number: <input type="text"></label></div>
-    <div class="main"><label>Date of Birth: <input type="date"></label></div>
-    <div><input type="submit" value="Submit"></div>
+    <div id="wrapper">
+      <div class="main"><label>Email Address: <input type="text"></label></div>
+      <div class="main"><label>Phone Number: <input type="text"></label></div>
+      <div class="main"><label>Date of Birth: <input type="date"></label></div>
+      <div><input type="submit" value="Submit"></div>
+    </div>
   </fieldset>
 </body>
 </html>
