updated font sizes and issues
removed border boxing for size

increased font sizes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1 id="header">Registration Form</h1>
   <fieldset>
-    <legend>Personal Information</legend>
+    <legend id="form_title">Personal Information</legend>
     <div id="wrapper">
       <div class="main"><label>Email Address: <input type="text"></label></div>
       <div class="main"><label>Phone Number: <input type="text"></label></div>
