added input css
and adjusted email

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <fieldset>
     <legend id="form_title">Personal Information</legend>
     <div id="wrapper">
-      <div class="main"><label>Email Address: <input type="text"></label></div>
+      <div class="main"><label>Email Address: <input type="email"></label></div>
       <div class="main"><label>Phone Number: <input type="text"></label></div>
       <div class="main"><label>Date of Birth: <input type="date"></label></div>
     </div>
