--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
   <fieldset>
     <legend id="form_title">Equipment Checklist</legend>
     <p>Please let me know by checking the boxes which equipment our team needs.</p>
-    <div id="wrapper">
-      <div class="main"><label>Helmets<input type="checkbox"></label></div>
-      <div class="main"><label>Gloves<input type="checkbox"></label></div>
-      <div class="main"><label>Shoes<input type="checkbox"></label></div>
-    </div>
+    <label for="news">
+      <input type="checkbox">
+      Helmets
+    </label>
+    <label for="updates">
+      <input type="checkbox">
+      Gloves
+    </label>
+    <label for="offers">
+      <input type="checkbox">
+      Batting Equipment
+    </label>
+  </div>
   </fieldset>
   <div><input type="submit" value="Submit"></div>
 </body>
