--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <legend id="form_title">Personal Information</legend>
     <div id="wrapper">
       <div class="main"><label>Name: <input type="text"></label></div>
-      <div class="main"><label>Email Address: <input type="email"></label></div>
-      <div class="main"><label>Phone Number: <input type="text"></label></div>
-      <div class="main"><label>Date of Birth: <input type="date"></label></div>
+      <div class="main"><label>Email: <input type="email"></label></div>
+      <div class="main"><label>Phone: <input type="text"></label></div>
+      <div class="main"><label>DoB: <input type="date"></label></div>
     </div>
   </fieldset>
   <fieldset>
