added more content

--- a/index.html
+++ b/index.html
@@ -46,20 +46,7 @@
   <fieldset>
     <legend id="form_title">Dietary Preferences</legend>
     <p>Please let me know what allergies you may have or potential foods you would like catered at Team Meetings.</p>
-    <div class="checkbox-group">
-      <label for="helmets">
-        <input type="checkbox" id="helmets" name="equipment">
-        Helmets
-      </label>
-      <label for="gloves">
-        <input type="checkbox" id="gloves" name="equipment">
-        Gloves
-      </label>
-      <label for="batting">
-        <input type="checkbox" id="batting" name="equipment">
-        Batting Equipment
-      </label>
-    </div>
+    <div class="main"><input type="text"></div>
   </fieldset>
 
   <!-- Submit Button -->
